--- a/PollFiction.Web/Views/Poll/Stats.cshtml
+++ b/PollFiction.Web/Views/Poll/Stats.cshtml
@@ -14,7 +14,21 @@
     </div>
     <div class="container-form">
 
-        Nombre de participant : 
+        <p>
+            Nombre de votant : @Model.GuestChoices.GroupBy(x => x.GuestId).Count()
+        </p>
+
+        <ol>
+            @{
+                var a = @Model.GuestChoices.GroupBy(x => x.ChoiceId);
+
+                foreach(var item in a)
+                {
+                    <li>@Model.Choices.Where(x => x.ChoiceId == @item.Key).Select(x => x.ChoiceText).FirstOrDefault()  @item.Count()</li>
+                }
+            }
+            
+        </ol>
         
     </div>
 </div>
