modifs divers sur design

--- a/PollFiction.Web/Views/Home/Index.cshtml
+++ b/PollFiction.Web/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Bienvenue sur PollFiction";
+    Layout = "~/Views/Shared/_LayoutIndex.cshtml";
 }
 
 <section class="text-center">
