--- a/PollFiction.Web/Views/Shared/_Layout.cshtml
+++ b/PollFiction.Web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,15 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PollFiction</a>
+                @{
+                    if(User.Claims.FirstOrDefault(u => u.Type.Equals("name")) != null)
+                    {
+                        <a class="navbar-brand" asp-area="" asp-controller="Poll" asp-action="Dashboard">PollFiction</a>
+                    }
+                    else{
+                        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PollFiction</a>
+                    }
+                }
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
