--- a/PollFiction.Web/Views/Poll/LinksPoll.cshtml
+++ b/PollFiction.Web/Views/Poll/LinksPoll.cshtml
@@ -44,7 +44,7 @@
                 
             </div>
             <div class="form-group">
-                <input type="submit" value="Envoyer les invitations" class="btn btn-primary" />
+                <input type="submit" value="Envoyer les invitations" class="btn btn-primary" onclick="Confirm()" />
             </div>
         </form>
 
@@ -62,6 +62,25 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script>
+
+            function Confirm(){
+
+               if(document.getElementById('ListGuest').childElementCount > 0){
+
+                   resultat = window.confirm("Voulez-vous confirmer la fin de création du sondage ?", );
+
+                    if(resultat){
+                        return true;
+                    }
+               }
+               else{
+                   alert("Veuillez saisir au moins un invité")
+               }
+
+                console.log("descativé");
+                this.event.returnValue = false;
+            }
+
         function copie(link){
             let content = document.getElementById(link).value;
 
