--- a/PollFiction.Web/Views/Poll/Stats.cshtml
+++ b/PollFiction.Web/Views/Poll/Stats.cshtml
@@ -33,6 +33,13 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Dashboard">Revenir au tableau de bord</a>
-</div>
+@{
+    if (User.Claims.FirstOrDefault(u => u.Type.Equals("name")) != null)
+    {
+        <div>
+            <a asp-action="Dashboard">Revenir au tableau de bord</a>
+        </div>
+    }
+}
+
+
