--- a/PollFiction.Web/Views/Poll/Stats.cshtml
+++ b/PollFiction.Web/Views/Poll/Stats.cshtml
@@ -21,7 +21,7 @@
         }
 
         <p>
-            Nombre de votant : @votant sur @nbGuest invités. Taux de participation : @String.Format("{0:0.##}",@taux) %;
+            Nombre de votant : @votant sur @nbGuest invités. Taux de participation : @String.Format("{0:0.##}",@taux) %
         </p>
 
         <ol>
