--- a/PollFiction.Web/Views/Poll/LinksPoll.cshtml
+++ b/PollFiction.Web/Views/Poll/LinksPoll.cshtml
@@ -122,7 +122,7 @@
 
                 //on récupère la valeur a afficher
                 let choice = document.getElementById(guest).value;
-                let masque =/^([\w\.]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
+                let masque =/^([\w\.\-]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
                 let error = true;
 
                 if (!choice.match(masque)) {
