--- a/PollFiction.Web/Views/Shared/_LayoutIndex.cshtml
+++ b/PollFiction.Web/Views/Shared/_LayoutIndex.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-
+    @*Layout alertnatif pour la page d'accueil*@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
