--- a/PollFiction.Web/Views/Poll/Stats.cshtml
+++ b/PollFiction.Web/Views/Poll/Stats.cshtml
@@ -18,6 +18,7 @@
             double votant = Model.GuestChoices.GroupBy(x => x.GuestId).Count();
             double nbGuest = Model.Poll.PollGuests.Where(x => x.PollId.Equals(Model.Poll.PollId)).ToList().GroupBy(x => x.GuestId).Count();
             double taux = (votant/nbGuest) * 100;
+            string tauxRound = Math.Round(taux, MidpointRounding.AwayFromZero).ToString() + "%";
         }
 
         <p>
@@ -27,10 +28,20 @@
         <ol>
             @{
                 var a = @Model.GuestChoices.GroupBy(x => x.ChoiceId);
+                var tauxGraph = string.Empty;
+                var whiteGraph = string.Empty;
+
 
                 foreach(var item in Model.statChoices)
                 {
-                    <li>@item.StringChoice : @item.ScoreChoice votes</li>
+                    tauxGraph = (100 - Math.Round(((@item.ScoreChoice / @nbGuest) * 100))).ToString() + "%";
+                    whiteGraph = (100 - Math.Round(((@item.ScoreChoice / @nbGuest) * 100))+5).ToString() + "%";
+                    <li class="li-vote">
+                        
+                        <div style="background: linear-gradient(to left, white @tauxGraph,@whiteGraph, lightblue );">
+                            @item.StringChoice : @item.ScoreChoice votes
+                        </div>
+                    </li>
                 }
             }
             
