--- a/PollFiction.Web/Views/Poll/Vote.cshtml
+++ b/PollFiction.Web/Views/Poll/Vote.cshtml
@@ -56,6 +56,7 @@
                 }
                 TempData["poll"] = @Model.Poll.PollId;
                 TempData["guestId"] = @Model.GuestId;
+                TempData["code"] = @Model.Poll.PollLinkAccess;
             }
 
             
