--- a/PollFiction.Web/Views/Shared/_Layout.cshtml
+++ b/PollFiction.Web/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <form asp-action="vote" method="get" class="form1" asp-controller="Poll">
+        <form asp-action="Stats" method="get" class="form1" asp-controller="Poll">
             <div class="div-form-search">
                 <input type="text" name="code" class="searchPoll searchPollFooter" placeholder="Saisiez un code de sondage" />
                 <input type="submit" value="Rechercher" class="btn btn-primary" />
